<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="material_app">Make your App Material</string>
    <string name="ubiquitous">Go Ubiquitos</string>
    <string name="capstone">Capstone</string>
</resources>
