<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    >
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aayushkapadia.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical"
    android:layout_gravity="center"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center"
        android:textColor="@android:color/black"/>
    <Button
        style="@style/MyUdacityApps"
        android:text="@string/popular_movies" />
    <Button
        style="@style/MyUdacityApps"
        android:text="@string/stock_hawk" />
    <Button
        style="@style/MyUdacityApps"
        android:text="@string/build_it_bigger"/>

    <Button
        style="@style/MyUdacityApps"
        android:text="@string/material_app"/>
    <Button
        style="@style/MyUdacityApps"
        android:text="@string/ubiquitous" />
    <Button
        style="@style/MyUdacityApps"
        android:text="@string/capstone" />
</LinearLayout>
    </FrameLayout>